# json_vizard

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: python-app.yaml
JSON-Vizard/: __init__.py
json_vizard/: ArgumentManipulation.py  Enums.py  FileHandling.py  Hashing.py  Indexing.py  InformationRetrieval.py  __init__.py  factorial.py
test/: test_ArgumentManipulation.py  test_FileHandling.py  test_Hashing.py  test_InformationRetrieval.py  test_factorial.py
test/scripts/: json_to_bson.py
test/test_data/bson/: deeply_nested.bson  empty_line_end_of_file.bson  lists.bson  mixed_types.bson  numbers.bson
test/test_data/json/: numbers.json
test/test_data/txt/: deeply_nested.txt  empty_line_end_of_file.txt  empty_line_in_between.txt  lists.txt  mixed_types.txt  numbers.txt
